--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ dependencies:
   dio: ^5.5.0+1
   flutter:
     sdk: flutter
+  flutter_carousel_widget: ^2.3.0
   flutter_riverpod: ^2.5.1
   freezed_annotation: ^2.4.2
   go_router: ^14.2.0
   google_fonts: ^6.2.1
+  intl: ^0.19.0
   json_annotation: ^4.9.0
+  logger: ^2.4.0
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.3
 
